@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -85,7 +85,7 @@ public class LoadingStrategiesTest {
             if (locale.equals(Locale.TAIWAN)) {
                 return Arrays.asList(locale,
                                      // no Locale("zh")
-                                     new Locale(""));
+                                     Locale.of(""));
             }
             return super.getCandidateLocales(baseName, locale);
         }
